--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://hacklabucm.github.io/HLU/'
+baseURL = 'https://hacklabucm.github.io/'
 languageCode = 'en-us'
 title = 'Hacklab UCM'
 theme = 'hugo-book'
