--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,8 @@ baseURL = 'https://hacklabucm.github.io/'
 languageCode = 'en-us'
 title = 'Hacklab UCM'
 theme = 'hugo-book'
+[markup.goldmark.renderHooks.image]
+enableDefault = true
+
+[markup.goldmark.renderHooks.link]
+enableDefault = true
